--- a/app/views/dev_test/index.html.erb
+++ b/app/views/dev_test/index.html.erb
@@ -3,6 +3,9 @@
 <% if admin_signed_in? %>
 <ul>
   <li><h3><%= current_admin.email %></h3></li>
+
+  <li><%= link_to "Logout", destroy_admin_session_path, method: :delete%></li>
+
 </ul>
 
   <% else %>
@@ -13,4 +16,24 @@
 
 
 <% end %>
+
+
+<% if user_signed_in? %>
+<ul>
+  <li><h3><%= current_user.email %></h3></li>
+  <li><%= link_to "Logout", destroy_user_session_path, method: :delete%></li>
+
+
+</ul>
+
+  <% else %>
+
+<ul>
+  <li><%= link_to "Login", new_user_session_path %></li>
+</ul>
+
+
+<% end %>
+
+
 <p>Find me in app/views/dev_test/index.html.erb</p>
