scaffold dashUser concluído. Controllers consertados. rotas atualizadas

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,13 +9,13 @@
   </div>
   <hr  style="margin-bottom: 0px">
   <div class="col-sm-6 ">
-    <b>Nome:</b> <%=@user.name %><br>
-    <b>Email:</b> <%=@user.email %><br>
+    <b>Nome:</b> <%=@user.name.upcase %><br>
+    <b>Email:</b> <%=@user.email.upcase %><br>
     <b>CPF:</b> <%=@user.cpf %><br>
     <b>Data de nascimento:</b> <%=@user.birthdate %>
 
     <b>RG:</b> <%=@user.rg %><br>
-    <b>Gênero:</b> <%=@user.gender %><br>
+    <b>Gênero:</b> <%=@user.gender.upcase %><br>
     <b>Telefone:</b> <%=@user.phone %><br>
     <b>Celular:</b> <%=@user.cel%><br>
 
