--- a/app/views/dev_test/index.html.erb
+++ b/app/views/dev_test/index.html.erb
@@ -20,7 +20,7 @@
 
 <% if user_signed_in? %>
 <ul>
-  <li><h3><%= current_user.email %></h3></li>
+  <li><h3><%= current_user.name %></h3></li>
   <li><%= link_to "Logout", destroy_user_session_path, method: :delete%></li>
 
 
