--- a/app/views/crew/admin_dashboard/index.html.erb
+++ b/app/views/crew/admin_dashboard/index.html.erb
@@ -2,15 +2,15 @@
 
 
 
-<head> <% if admin_signed_in? %>
+<head> <% if crew_admin_signed_in? %>
 
   <h3>Logout_link</h3></li>
-  <%= link_to(destroy_admin_session_path, :method => :delete, class: 'btn btn-default btn-flat')  do %>
+  <%= link_to(destroy_crew_admin_session_path, :method => :delete, class: 'btn btn-default btn-flat')  do %>
   Logout
   <% end %>
 
   <h3>Cadstro_edit_link</h3></li>
-  <%= link_to "Editar Cadastro", edit_admin_registration_path%>
+  <%= link_to "Editar Cadastro", edit_crew_admin_registration_path%>
 
 
 
