--- a/app/views/layouts/admin_dashboard.html.erb
+++ b/app/views/layouts/admin_dashboard.html.erb
@@ -2,15 +2,13 @@
 
 
 
-<head> <% if admin_signed_in? %>
-
+<head> <% if crew_admin_signed_in? %>
+<li><h3><%= current_crew_admin.email %></h3></li>
   <h3>Logout_link</h3></li>
-  <%= link_to(destroy_admin_session_path, :method => :delete, class: 'btn btn-default btn-flat')  do %>
-  Logout
-  <% end %>
+  <li><%= link_to "Logout", destroy_crew_admin_session_path, method: :delete%></li>
 
   <h3>Cadstro_edit_link</h3></li>
-  <%= link_to "Editar Cadastro", edit_admin_registration_path%>
+  <%= link_to "Editar Cadastro", edit_crew_admin_registration_path%>
 
 
 
