Links base adicionados

--- a/app/views/layouts/admin_dashboard.html.erb
+++ b/app/views/layouts/admin_dashboard.html.erb
@@ -11,6 +11,11 @@
   <%= link_to "Editar Cadastro", edit_crew_admin_registration_path%>
 
 
+  <li><%= link_to "Gerenciar Usuários"%></li>
+    <li><%= link_to "Gerenciar Evento"%></li>
+      <li><%= link_to "Gerenciar Formulários"%></li>
+
+
 
   <h3>PasswordEdit_link</h3></li>
   <%= link_to "cacilds vidis litro abertis", password_edit_path %>
