--- a/app/views/crew/admin_dashboard/index.html.erb
+++ b/app/views/crew/admin_dashboard/index.html.erb
@@ -10,13 +10,13 @@
 
 
   <h3>Cadstro_edit_link</h3></li>
-  <%= link_to "Editar Cadastro", edit_crew_admin_registration_path%>
+  <%#<%= link_to "Editar Cadastro", edit_crew_admin_registration_path%>
 
 
-  <li><%= link_to "Gerenciar Usuários"%></li>
+  <li><%= link_to "Gerenciar Usuários", crew_manage_users_path %></li>
     <li><%= link_to "Gerenciar Evento"%></li>
       <li><%= link_to "Gerenciar Formulários"%></li>
-
+          <li><%= link_to "Gerenciar Admin", crew_manage_admin_path%></li>
 
 
   <h3>PasswordEdit_link</h3></li>
