--- a/app/views/crew/users_management/index.html.erb
+++ b/app/views/crew/users_management/index.html.erb
@@ -1,6 +1,6 @@
 <section class="content-header">
    <h1>
-      Admins
+      users
       <small>Equipe</small>
    </h1>
 </section>
@@ -11,10 +11,10 @@
       <div class="col-xs-12">
          <div class="box">
             <div class="box-header">
-               <h3 class="box-title">Gerenciamento de Administradores</h3>
+               <h3 class="box-title">Gerenciamento de usuários</h3>
             </div>
             <div class="box-header with-border">
-               <%= link_to "Cadastar Novo Admin", new_crew_admin_path, class:"btn btn-info" %>
+               <%= link_to "Cadastar Novo user", new_user_registration_path, class:"btn btn-info" %>
                <div class="box-tools pull-right">
                   <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                </div>
@@ -30,18 +30,18 @@
                      </tr>
                   </thead>
                   <tbody>
-                     <% if !@admins.nil? %>
-                     <% @admins.each do |admin| %>
+                     <% if !@users.nil? %>
+                     <% @users.each do |user| %>
                      <tr>
-                        <%#<td><%= admin.name %></td>
-                        <td><%= admin.email %></td>
+                        <%#<td><%= user.name %></td>
+                        <td><%= user.email %></td>
                         <td>
-                           <%= link_to edit_crew_admin_path(admin) do %>
+                           <%= link_to  crew_edit_user_path(user.id) do %>
                            <small class="btn btn-default dropdown-toggle btn-xs">
                            <i class="fa fa-pencil-square-o"></i> Editar
                            </small>
                            <% end %>
-                           <%= link_to crew_admin_path(admin), method: :delete, data: { confirm: "Deseja realmente apagar o administrador #{admin.email}" } do %>
+                           <%= link_to cancel_user_registration_path(user), method: :delete, data: { confirm: "Deseja realmente apagar o useristrador #{user.email}" } do %>
                            <small class="btn btn-danger dropdown-toggle btn-xs">
                            <i class="fa fa-pencil-square-o"></i> Excluir
                            </small>
